<resources>
    <string name="app_name">Recycler View</string>
    <string name="name">Name:</string>
    <string name="cat_name">Cat Name</string>
    <string name="cat_origin">Cat Origin</string>
    <string name="origin">Origin:</string>
    <string name="cat_age">Cat Age</string>
    <string name="age">Age:</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="food_name">Food Name</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="price">Price:</string>
    <string name="food_price">Food Price</string>
    <string name="advertisement">Advertisement</string>
    <string name="android">Android</string>
    <string name="title">This is the title</string>
    <string name="description">This is the description</string>
</resources>