<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:backgroundTint="?android:textColorPrimary"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/advertisement"
            android:gravity="center"
            android:textColor="?android:textColorPrimaryInverse"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:gravity="center"
            android:textColor="?android:textColorPrimaryInverse"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:gravity="center"
            android:textColor="?android:textColorPrimaryInverse"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
